--- a/partnership.html
+++ b/partnership.html
@@ -24,7 +24,7 @@
         <div id="rectangle">
             <h2 class="text"><br>Контакты</h2>
         <p class="logo2"><br><br> Для того чтобы получить консультацию,<br><br>а так же по вопросам сотрудничества
-            и<br><br> рекламных предложений, свяжитесь со мной<br><br>любым из удобных способов связи.<br><br></p>
+            и<br><br> рекламных предложений, свяжитесь со мной<br><br>любым из удобных способов связи внизу страницы.<br><br></p>
             <div class="el_icons">
             </div>
                     <ul>
