--- a/partnership.html
+++ b/partnership.html
@@ -24,10 +24,12 @@
         <div id="rectangle">
             <h2 class="text"><br>Контакты</h2>
         <p class="logo2"><br><br> Для того чтобы получить консультацию,<br><br>а так же по вопросам сотрудничества
-            и<br><br> рекламных предложений, свяжитесь со мной<br><br>любым из удобных способов связи внизу страницы.<br><br></p>
-            <div class="el_icons">
+            и<br><br> рекламных предложений, свяжитесь со мной<br><br>любым из удобных способов связи.<br><br>
+        приведенных внизу страницы</p>
             </div>
-                    <ul>
+    </div>
+                <div class="el_icons">
+    <ul>
         <li class="social instagram">
             <a href="https://www.instagram.com/eleonora_paris_kosmetolog/" target="_blank">
                 <i class="fa fa-instagram fa-2x"></i></a>
@@ -43,7 +45,6 @@
         </li>
     </ul>
 </div>
-    </div>
 </div>
 </body>
 </HTML >
