--- a/index.html
+++ b/index.html
@@ -15,13 +15,26 @@
         <hr>
         <nav>
   <ul class="nav">
-      <li class="links logo2"><a href="eleonora.html">Обо мне</a></li>
-      <li class="links logo2"><a href="partnership.html">Контакты</a></li>
+      <li class="links logo2"><a href="#service">УСЛУГИ</a></li>
+      <li class="links logo2"><a href="#contacts">Контакты</a></li>
   </ul>
         </nav>
     </header>
     <div class="content">
-
+        <div id="contacts">
+        <p class="logo2"><br><br><br><br><br><br> Для консультации, а так же по вопросам<br><br>сотрудничества
+            и рекламных предложений,<br><br> свяжитесь со мной любым из удобных <br><br>способов связи.</p>
+        </div>
+    </div>
+    <div id="service">
+            <p class="logo2"><span><br><br>Спектр косметологических услуг:<br><br><br></span></p>
+            <ul class="logo2">
+                <li>Объёмное моделирование губ, скул, носогубки<br><br></li>
+                <li>Ботулинотерапия глаз, лба, межбровной части<br><br></li>
+                <li>Мезотерапия лица и тела<br><br></li>
+                <li>Биоревитализация<br><br></li>
+                <li>Пилинг лица<br></li>
+            </ul>
     </div>
 <div class="el_icons">
     <ul>
