--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <header>
         <a href="index.html"><h1 class="logo">ELEONORA PARIS</h1>
         </a>
-            <h2 class="logo2">Косметолог высшей категории<br><span class="red">Москва</span> </h2>
+            <h2 class="logo2">Косметолог высшей категории<br>
+            <span>Москва</span></h2>
+
         <hr>
         <nav>
   <ul class="nav">
@@ -22,34 +24,119 @@
     </header>
     <div class="content">
         <div id="contacts">
-        <p class="logo2"><br><br><br><br><br><br> Для консультации, а так же по вопросам<br><br>сотрудничества
-            и рекламных предложений,<br><br> свяжитесь со мной любым из удобных <br><br>способов связи.</p>
-        </div>
+        <a href="index.html"><div class="close"></div></a>
+        <h2 class="logo2"><br><span>Контакты</span></h2><hr>
+        <p class="logo2"><br> Для консультации, а так же по вопросам<br><br>сотрудничества
+            и рекламных предложений,<br><br> свяжитесь со мной любым из удобных <br><br>способов связи.
+            <br></p>
+            <div class="el_icons">
+                <ul>
+                    <li class="social telegram">
+                        <a href="https://t.me/R_Squared/" target="_blank"><i class="fa fa-paper-plane fa-2x"></i></a>
+                    <p class="logo logo2">Написать в телеграмм<br></p>
+                    </li>
+                    <li class="social envelope"><br>
+                        <a href="mailto:eleonora.paris@pm.me" target="_blank"><i class="fa fa-envelope fa-2x"></i></a>
+                    <p class="logo logo2">Отправить email</p>
+                    </li>
+                </ul>
+            </div>
+    </div>
         <div id="service">
-            <p class="logo2"><span><br><br>Спектр косметологических услуг:<br><br><br></span></p>
-            <ul class="logo2">
-                <li>Объёмное моделирование губ, скул, носогубки<br><br></li>
-                <li>Ботулинотерапия глаз, лба, межбровной части<br><br></li>
-                <li>Мезотерапия лица и тела<br><br></li>
-                <li>Биоревитализация<br><br></li>
-                <li>Пилинг лица<br></li>
+            <a href="index.html"><div class="close"></div></a>
+            <h2 class="logo2"><br><span>Спектр услуг</span></h2><hr><br>
+            <ul class="list logo2">
+                <li><a href="#lips">Объёмное моделирование губ, скул, носогубки</a><br><br></li>
+                <li><a href="#botulinotherapy">Ботулинотерапия глаз, лба, межбровной части</a><br><br></li>
+                <li><a href="#mezo">Мезотерапия </a><br><br></li>
+                <li><a href="#bio">Биоревитализация</a><br><br></li>
+                <li><a href="#pilings">Пилинг лица</a><br><br></li>
             </ul>
         </div>
-    </div>
+        </div>
+        <div id="lips">
+            <a href="#service"><div class="close"></div></a>
+            <br>
+            <h2 class="logo2"><span>Объёмное моделирование<br><br> губ, скул, носогубки</span></h2>
+            <br><br>
+            <table class="table">
+            <tr><th>Препарат</th><th>Цена</th></tr>
+            <tr><td>Princess</td><td>от 5500 р.</td></tr>
+            <tr><td>Rejeunesse</td><td>от 5500 р.</td></tr>
+            <tr><td>Juviderm</td><td>от 10 000р.</td></tr>
+            <tr><td>Radiesse</td><td>от 12 500р.</td></tr>
+            </table>
+            <a href="#botulinotherapy"><div class="arrow-right"></div></a>
+        </div>
+        <div id="botulinotherapy">
+            <a href="#service"><div class="close"></div></a>
+            <br><br>
+            <p class="logo2"><span>Ботулинотерапия<br></span></p>
+            <br><br>
+            <table class="table">
+            <tr><th>Зона</th><th>Цена</th></tr>
+            <tr><td>Лоб</td><td>от 2000 р.</td></tr>
+            <tr><td>Межбровная часть</td><td>от 2000 р.</td></tr>
+            <tr><td>Глаза</td><td>от 1500р.</td></tr>
+            </table>
+            <a href="#lips"><div class="arrow-left"></div></a>
+            <a href="#mezo"><div class="arrow-right"></div></a>
+        </div>
+        <div id="mezo">
+            <a href="#service"><div class="close"></div></a>
+            <br><br>
+            <p class="logo2"><span>Мезотерапия</span></p>
+            <br><br>
+            <table class="table">
+            <tr><th>Зона</th><th>Цена</th></tr>
+            <tr><td>Лица</td><td>от 2000 р.</td></tr>
+            <tr><td>Тела</td><td>от 3000 р.</td></tr>
+            <tr><td>Глаза</td><td>от 1500р.</td></tr>
+            </table>
+            <a href="#botulinotherapy"><div class="arrow-left"></div></a>
+            <a href="#bio"><div class="arrow-right"></div></a>
+        </div>
+        <div id="bio">
+            <a href="#service"><div class="close"></div></a>
+            <br><br>
+            <p class="logo2"><span>Биоревитализация</span></p>
+            <br><br>
+            <table class="table">
+            <tr><th>Зона</th><th>Цена</th></tr>
+            <tr><td>Лица</td><td>от 2000 р.</td></tr>
+            <tr><td>Тела</td><td>от 3000 р.</td></tr>
+            <tr><td>Глаза</td><td>от 1500р.</td></tr>
+            </table>
+            <a href="#mezo"><div class="arrow-left"></div></a>
+            <a href="#pilings"><div class="arrow-right"></div></a>
+        </div>
+    <div id="pilings">
+            <a href="#service"><div class="close"></div></a>
+            <br><br>
+            <p class="logo2"><span>Пилинги</span></p>
+            <br><br>
+            <table class="table">
+            <tr><th>Цена</th><th>Цена</th></tr>
+            <tr><td>Желтый</td><td>от 2000 р.</td></tr>
+            <tr><td>ТСА</td><td>от 1500 р.</td></tr>
+            <tr><td>Джесснера</td><td>от 1500р.</td></tr>
+            <tr><td>Салициловый</td><td>от 1000р.</td></tr>
+            <tr><td>Миндальный</td><td>от 1000р.</td></tr>
+            </table>
+        <a href="#bio"><div class="arrow-left"></div></a>
+        </div>
 <div class="el_icons">
     <ul>
         <li class="social instagram">
             <a href="https://www.instagram.com/eleonora_paris_kosmetolog/" target="_blank">
                 <i class="fa fa-instagram fa-2x"></i></a>
         </li>
+        <li class="social facebook">
+            <a href="https://www.facebook.com/eleonora.paris.98" target="_blank"><i class="fa fa-facebook fa-2x"></i>
+            </a>
+        </li>
         <li class="social vk">
             <a href="https://vk.com/eleonora_paris" target="_blank"><i class="fa fa-vk fa-2x"></i></a>
-        </li>
-        <li class="social facebook">
-            <a href="https://www.facebook.com/eleonora.paris.98" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>
-        </li>
-        <li class="social envelope">
-            <a href="mailto:eleonora.paris@pm.me" target="_blank"><i class="fa fa-envelope fa-2x"></i></a>
         </li>
     </ul>
 </div>
