--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>ELEONORA PARIS - Косметолог. Москва</title>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="cosmetic.css" rel="stylesheet">
 <link rel="icon" href="Images/favicon.png" type="xicon">
     <!-- Yandex.Metrika counter -->
@@ -10,7 +11,6 @@
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
    m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
    ym(54953359, "init", {
         clickmap:true,
         trackLinks:true,
