--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>ELEONORA PARIS - Косметолог. Москва</title>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="cosmetic.css" rel="stylesheet">
 <link rel="icon" href="Images/favicon.png" type="xicon">
 </head>
@@ -13,7 +14,6 @@
         </a>
             <h2 class="logo2">Косметолог высшей категории<br>
             <span>Москва</span></h2>
-
         <hr>
         <nav>
   <ul class="nav">
