--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="el_icons">
                 <ul>
                     <li class="social telegram">
-                        <a href="https://t.me/R_Squared/" target="_blank"><i class="fa fa-paper-plane fa-2x"></i></a>
+                        <a href="https://t.me/eleonoraparis" target="_blank"><i class="fa fa-paper-plane fa-2x"></i></a>
                     <p class="logo logo2">Написать в телеграмм<br></p>
                     </li>
                     <li class="social envelope"><br>
@@ -40,6 +40,21 @@
                     <p class="logo logo2">Отправить email</p>
                     </li>
                 </ul>
+<div class="el_icons">
+    <ul>
+        <li class="social instagram">
+            <a href="https://www.instagram.com/eleonora_paris_kosmetolog/" target="_blank">
+                <i class="fa fa-instagram fa-2x"></i></a>
+        </li>
+        <li class="social facebook">
+            <a href="https://www.facebook.com/eleonora.paris.98" target="_blank"><i class="fa fa-facebook fa-2x"></i>
+            </a>
+        </li>
+        <li class="social vk">
+            <a href="https://vk.com/eleonora_paris" target="_blank"><i class="fa fa-vk fa-2x"></i></a>
+        </li>
+    </ul>
+</div>
             </div>
     </div>
         <div id="service">
@@ -125,21 +140,6 @@
             </table>
         <a href="#bio"><div class="arrow-left"></div></a>
         </div>
-<div class="el_icons">
-    <ul>
-        <li class="social instagram">
-            <a href="https://www.instagram.com/eleonora_paris_kosmetolog/" target="_blank">
-                <i class="fa fa-instagram fa-2x"></i></a>
-        </li>
-        <li class="social facebook">
-            <a href="https://www.facebook.com/eleonora.paris.98" target="_blank"><i class="fa fa-facebook fa-2x"></i>
-            </a>
-        </li>
-        <li class="social vk">
-            <a href="https://vk.com/eleonora_paris" target="_blank"><i class="fa fa-vk fa-2x"></i></a>
-        </li>
-    </ul>
-</div>
 </div>
 </body>
 </HTML >
