--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="cosmetic.css" rel="stylesheet">
+<link href="mobile.css" rel="stylesheet" media="only screen and (max-device-width: 480px)">
 <link rel="icon" href="Images/favicon.png" type="xicon">
 </head>
 <body>
