--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                 <ul>
                     <li class="social telegram">
                         <a href="https://t.me/eleonoraparis" target="_blank"><i class="fa fa-paper-plane fa-2x"></i></a>
-                    <p class="logo logo2">Написать в телеграмм<br></p>
+                    <p class="logo2">Написать в телеграмм<br></p>
                     </li>
                     <li class="social envelope"><br>
                         <a href="mailto:eleonora.paris@pm.me" target="_blank"><i class="fa fa-envelope fa-2x"></i></a>
-                    <p class="logo logo2">Отправить email</p>
+                    <p class="logo2">Отправить email</p>
                     </li>
                 </ul>
 <div class="el_icons">
