--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
     <div class="content">
         <div id="contacts">
         <a href="index.html"><div class="close"></div></a>
-        <p class="logo2"><br> Для консультации, а так же по вопросам<br><br>сотрудничества
+        <p class="list logo2"><br> Для консультации, а так же по вопросам<br><br>сотрудничества
             и рекламных предложений,<br><br> свяжитесь со мной любым из удобных <br><br>способов связи.
             <br></p>
             <div class="el_icons">
                 <ul>
                     <li class="social telegram">
                         <a href="https://t.me/eleonoraparis" target="_blank"><i class="fa fa-paper-plane fa-2x"></i></a>
-                    <p class="logo2">Написать в телеграмм<br></p>
+                    <p class="list logo2">Написать в телеграмм<br></p>
                     </li>
                     <li class="social envelope"><br>
                         <a href="mailto:eleonora.paris@pm.me" target="_blank"><i class="fa fa-envelope fa-2x"></i></a>
-                    <p class="logo2">Отправить email</p>
+                    <p class="list logo2">Отправить email</p>
                     </li>
                 </ul>
 <div class="el_icons">
