--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <ul>
                     <li class="social telegram">
                         <a href="https://t.me/eleonoraparis" target="_blank"><i class="fa fa-paper-plane fa-2x"></i></a>
-                    <p class="list logo2">Написать в телеграмм<br></p>
+                    <p class="list logo2">Написать в телеграмм<br><br><br></p>
                     </li>
                     <li class="social envelope"><br>
                         <a href="mailto:eleonora.paris@pm.me" target="_blank"><i class="fa fa-envelope fa-2x"></i></a>
