--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     </header>
     <div class="content">
         <div id="contacts">
-        <p class="list logo2"><br> Для консультации, а так же по вопросам<br><br>сотрудничества
-            и рекламных предложений,<br><br> свяжитесь со мной любым из удобных <br><br>способов связи.
+        <p class="list logo2"><br> Для консультации, а так же по вопросам сотрудничества
+            и рекламных предложений, свяжитесь со мной любым из удобных способов связи.
             <br></p>
             <div class="el_icons">
                 <ul>
