--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </ul>
             </div>
     </div>
-    <div class="el_icons">
+    <footer class="el_icons">
     <ul>
         <li class="social instagram">
             <a href="https://www.instagram.com/eleonora_paris_kosmetolog/" target="_blank">
@@ -55,7 +55,7 @@
             <a href="https://vk.com/eleonora_paris" target="_blank"><i class="fa fa-vk fa-2x"></i></a>
         </li>
     </ul>
-</div>
+</footer>
         <div id="service">
             <ul class="list logo2">
                 <li><a href="#lips">Объёмное моделирование губ, скул, носогубки</a><br><br></li>
