--- a/sidebar-left.html
+++ b/sidebar-left.html
@@ -4,15 +4,15 @@
 	<meta charset="utf-8">
 	<meta name="viewport"    content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
-	<meta name="author"      content="Sergey Pozhilov (GetTemplate.com)">
+	<meta name="author"      content="DarvinLeo">
 	
-	<title>Left Sidebar template - Progressus Bootstrap template</title>
+	<title>Эстетическая косметология. Eleonora Paris</title>
 
 	<link rel="shortcut icon" href="assets/images/gt_favicon.png">
 	
 	<link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
-	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
 
 	<!-- Custom styles for our template -->
 	<link rel="stylesheet" href="assets/css/bootstrap-theme.css" media="screen" >
@@ -36,17 +36,16 @@
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="about.html">About</a></li>
+					<li><a href="index.html">ГЛАВНАЯ</a></li>
+					<li><a href="about.html">КТО Я</a></li>
 					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">More Pages <b class="caret"></b></a>
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">УСЛУГИ<b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li class="active"><a href="sidebar-left.html">Left Sidebar</a></li>
-							<li><a href="sidebar-right.html">Right Sidebar</a></li>
+							<li class="active"><a href="sidebar-left.html">Эстетическая косметология</a></li>
+							<li><a href="sidebar-right.html">Инъекционная косметология</a></li>
 						</ul>
 					</li>
-					<li><a href="contact.html">Contact</a></li>
-					<li><a class="btn" href="signin.html">SIGN IN / SIGN UP</a></li>
+					<li><a href="contact.html">КОНТАКТЫ</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
@@ -59,8 +58,8 @@
 	<div class="container">
 		
 		<ol class="breadcrumb">
-			<li><a href="index.html">Home</a></li>
-			<li class="active">Left Sidebar</li>
+			<li><a href="index.html">ГЛАВНАЯ</a></li>
+			<li class="active">Эстетическая косметогия</li>
 		</ol>
 
 		<div class="row">
@@ -69,10 +68,6 @@
 			<aside class="col-md-4 sidebar sidebar-left">
 
 				<div class="row widget">
-					<div class="col-xs-12">
-						<h4>Lorem ipsum dolor sit</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, ratione delectus reiciendis nulla nisi pariatur molestias animi eos repellat? Vel.</p>
-					</div>
 				</div>
 				<div class="row widget">
 					<div class="col-xs-12">
@@ -94,24 +89,18 @@
 			<!-- Article main content -->
 			<article class="col-md-8 maincontent">
 				<header class="page-header">
-					<h1 class="page-title">Lorem ipsum dolor sit amet, consectetur.</h1>
+					<h1 class="page-title">Эстетическая косметология</h1>
 				</header>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium, itaque, cumque, maxime obcaecati reprehenderit ea dignissimos amet voluptatem id excepturi facilis totam veritatis maiores eveniet neque explicabo temporibus quisquam in ex ab fugiat ipsa tempore sunt corporis nostrum quam illum!</p>
-				<p>Consectetur cupiditate labore repudiandae beatae nisi fugiat facilis natus illum vitae doloremque. In, perspiciatis, natus, impedit voluptas itaque odio repudiandae placeat nisi totam repellendus earum dolores mollitia tempore quasi beatae alias cum dicta maxime laborum corporis harum porro magnam laboriosam.</p>
-				<p>Aut, eaque, minus atque alias odio mollitia cum nisi ipsa nulla natus quae minima similique ipsam aspernatur molestias animi in deleniti nam. Tempora, labore, modi eum perspiciatis doloremque sequi nam illo corporis iusto maiores nisi recusandae repellat animi reiciendis accusamus.</p>
+				<p>Это область косметологии, направленная на поддержание молодости и устранения признаков старения. Она включает в себя только терапевтическое лечение без хирургического вмешательства./p>
+				
 
-				<h2>A, quibusdam, nobis, eveniet consequatur</h2>
-				<p>A, quibusdam, nobis, eveniet consequatur alias doloremque officia blanditiis fuga et numquam labore reiciendis voluptas quis repellat quos sunt non dolore consectetur at sit nam tenetur dolorem? Harum, quas, sit perspiciatis esse odit temporibus aperiam nulla aspernatur sequi fugiat tempore?</p>
-				<p>Ad velit consequuntur quo qui odit quam sapiente repudiandae et ea pariatur? Ex sapiente beatae nobis consectetur ea. Deleniti, beatae, magnam, dolorum, fuga nostrum quas laboriosam sapiente temporibus enim voluptates ullam impedit atque quae provident quos mollitia aperiam perferendis amet.</p>
+				<h2>Химические пилинги</h2>
+				<p>Пилинг – процедура, направленная на снятие ороговевшего слоя дермы. С помощью процедуры пациент избавляется от морщин, отвисания кожи, пигментации, пятен после прыщей. Эффективность действия зависит от активного вещества. В качестве пилинга в косметологии используют – салициловую, миндальную, молочную, трихлоруксусную, гликолевую кислоты.</p>
+				<p>Период восстановления зависит от глубины воздействия: от нескольких часов до 1 недели. Химические пилинги рекомендуется проводить курсом (7-10 сеансов) 1-2 раза в год. </p>
+				<p>Противопоказания – воспаления и открытые раны на коже, купероз, заболевания сердца, непереносимость компонентов.</p>
 
-				<blockquote>Numquam, ut iure quia facere totam quas odit illo incidunt. Voluptatem, nostrum, ex, quasi incidunt similique cum maxime expedita unde labore inventore excepturi veniam corporis sequi facere ullam voluptates amet illum quam fuga voluptatibus ipsum atque sunt eos. Ut, necessitatibus.</blockquote>
-				<p>Odit, laudantium, dolores, natus distinctio labore voluptates in inventore quasi qui nobis quis adipisci fugit id! Aliquam alias ea modi. Porro, odio, sed veniam hic numquam qui ad molestiae sint placeat expedita? Perferendis, enim qui numquam sequi obcaecati molestiae fugiat!</p>
-				<p>Aperiam, odit, quasi, voluptate fugiat quisquam velit magni provident corporis animi facilis illo eveniet eum obcaecati adipisci blanditiis quas labore doloribus eos veniam repudiandae suscipit tempora ad harum odio eius distinctio hic deleniti. Sunt fuga ad perspiciatis repellat deleniti omnis!</p>
+				<blockquote>чтО НИБУДЬ КРАСИВОЕ</blockquote>
 
-				<h3>Numquam, ut iure quia facere totam quas odit illo incidunt</h3>
-				<p>Est, maiores, fuga sed nemo qui veritatis ducimus placeat odit quisquam dolorum. Rem, sunt, praesentium veniam maiores quia molestias eos fugit eaque ducimus veritatis provident assumenda. Quia, fuga, voluptates voluptatibus quis enim nam asperiores aliquam dignissimos ullam recusandae debitis iste.</p>
-				<p>Dignissimos, beatae, praesentium illum eos autem perspiciatis? Minus, non, tempore, illo, mollitia exercitationem tempora quas harum odio dolores delectus quidem laudantium adipisci ducimus ullam placeat eaque minima quae iure itaque corporis magni nesciunt eius sed dolor doloremque id quasi nisi.</p>
-			</article>
 			<!-- /Article -->
 
 		</div>
@@ -125,12 +114,16 @@
 				<div class="row">
 					
 					<div class="col-md-3 widget">
-						<h3 class="widget-title">Contact</h3>
+						<h3 class="widget-title">КОНТАКТЫ</h3>
 						<div class="widget-body">
-							<p>+234 23 9873237<br>
-								<a href="mailto:#">some.email@somewhere.com</a><br>
+							<p class="follow-me-icons">
+								<a href="tel: +79670470205"><i class="fas fa-phone"></i></a>
+								<a href="https://api.whatsapp.com/send?phone=79670470205">
+									<i class="fab fa-whatsapp"></i></a>
+								<a href="https://tlgg.ru/eleonoraparis"><i class="fab fa-telegram-plane"></i></a>
+								<a href="mailto: eleonora.paris@protonmail.com"><i class="far fa-envelope"></i></a>
 								<br>
-								234 Hidden Pond Road, Ashland City, TN 37015
+								Москва
 							</p>	
 						</div>
 					</div>
@@ -139,19 +132,17 @@
 						<h3 class="widget-title">Follow me</h3>
 						<div class="widget-body">
 							<p class="follow-me-icons">
-								<a href=""><i class="fa fa-twitter fa-2"></i></a>
-								<a href=""><i class="fa fa-dribbble fa-2"></i></a>
-								<a href=""><i class="fa fa-github fa-2"></i></a>
-								<a href=""><i class="fa fa-facebook fa-2"></i></a>
+								<a href=""><i class="fab fa-instagram"></i></a>		
+								<a href=""><i class="fab fa-facebook-f"></i></a>
+								<a href=""><i class="fab fa-vk"></i></a>
 							</p>	
 						</div>
 					</div>
 
 					<div class="col-md-6 widget">
-						<h3 class="widget-title">Text widget</h3>
+						<h3 class="widget-title">ELEONORA PARIS</h3>
 						<div class="widget-body">
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, dolores, quibusdam architecto voluptatem amet fugiat nesciunt placeat provident cumque accusamus itaque voluptate modi quidem dolore optio velit hic iusto vero praesentium repellat commodi ad id expedita cupiditate repellendus possimus unde?</p>
-							<p>Eius consequatur nihil quibusdam! Laborum, rerum, quis, inventore ipsa autem repellat provident assumenda labore soluta minima alias temporibus facere distinctio quas adipisci nam sunt explicabo officia tenetur at ea quos doloribus dolorum voluptate reprehenderit architecto sint libero illo et hic.</p>
+							<p>Оказываю косметологические услуги на дому. </p>
 						</div>
 					</div>
 
@@ -166,11 +157,10 @@
 					<div class="col-md-6 widget">
 						<div class="widget-body">
 							<p class="simplenav">
-								<a href="#">Home</a> | 
-								<a href="about.html">About</a> |
-								<a href="sidebar-right.html">Sidebar</a> |
-								<a href="contact.html">Contact</a> |
-								<b><a href="signup.html">Sign up</a></b>
+								<a href="#">ГЛАВНАЯ</a> | 
+								<a href="about.html">КТО Я</a> |
+								<a href="sidebar-right.html">УСЛУГИ</a> |
+								<a href="contact.html">КОНТАКТЫ</a> |
 							</p>
 						</div>
 					</div>
@@ -178,10 +168,13 @@
 					<div class="col-md-6 widget">
 						<div class="widget-body">
 							<p class="text-right">
-								Copyright &copy; 2014, Your name. Designed by <a href="http://gettemplate.com/" rel="designer">gettemplate</a> 
+								Eleonora Paris &copy; 2019. All rights reserved.
 							</p>
 						</div>
 					</div>
+
+					<div class="col-md-6 widget">
+
 
 				</div> <!-- /row of widgets -->
 			</div>
