--- a/contact.html
+++ b/contact.html
@@ -4,15 +4,15 @@
 	<meta charset="utf-8">
 	<meta name="viewport"    content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
-	<meta name="author"      content="Sergey Pozhilov (GetTemplate.com)">
+	<meta name="author"      content="DarvinLeo">
 	
-	<title>Contact us - Progressus Bootstrap template</title>
+	<title>КОНТАКТЫ. ELEONORA PARIS</title>
 
 	<link rel="shortcut icon" href="assets/images/gt_favicon.png">
 	
 	<link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
-	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
 
 	<!-- Custom styles for our template -->
 	<link rel="stylesheet" href="assets/css/bootstrap-theme.css" media="screen" >
@@ -36,17 +36,16 @@
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="about.html">About</a></li>
+					<li class="active"><a href="index.html">ГЛАВНАЯ</a></li>
+					<li><a href="about.html">КТО Я</a></li>
 					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">More Pages <b class="caret"></b></a>
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">УСЛУГИ <b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="sidebar-left.html">Left Sidebar</a></li>
-							<li><a href="sidebar-right.html">Right Sidebar</a></li>
+							<li><a href="sidebar-left.html">Эстетическия косметологияr</a></li>
+							<li class="active"><a href="sidebar-right.html">Инъекционная косметология</a></li>
 						</ul>
 					</li>
-					<li class="active"><a href="contact.html">Contact</a></li>
-					<li><a class="btn" href="signin.html">SIGN IN / SIGN UP</a></li>
+					<li><a href="contact.html">КОНТАКТЫ</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
@@ -59,8 +58,8 @@
 	<div class="container">
 
 		<ol class="breadcrumb">
-			<li><a href="index.html">Home</a></li>
-			<li class="active">About</li>
+			<li><a href="index.html">ГЛАВНАЯ</a></li>
+			<li class="active">КТО Я</li>
 		</ol>
 
 		<div class="row">
@@ -68,47 +67,28 @@
 			<!-- Article main content -->
 			<article class="col-sm-9 maincontent">
 				<header class="page-header">
-					<h1 class="page-title">Contact us</h1>
+					<h1 class="page-title">КОНТАКТЫ</h1>
 				</header>
 				
-				<p>
-					We’d love to hear from you. Interested in working together? Fill out the form below with some info about your project and I will get back to you as soon as I can. Please allow a couple days for me to respond.
-				</p>
-				<br>
-					<form>
-						<div class="row">
-							<div class="col-sm-4">
-								<input class="form-control" type="text" placeholder="Name">
-							</div>
-							<div class="col-sm-4">
-								<input class="form-control" type="text" placeholder="Email">
-							</div>
-							<div class="col-sm-4">
-								<input class="form-control" type="text" placeholder="Phone">
-							</div>
-						</div>
-						<br>
-						<div class="row">
-							<div class="col-sm-12">
-								<textarea placeholder="Type your message here..." class="form-control" rows="9"></textarea>
-							</div>
-						</div>
-						<br>
-						<div class="row">
-							<div class="col-sm-6">
-								<label class="checkbox"><input type="checkbox"> Sign up for newsletter</label>
-							</div>
-							<div class="col-sm-6 text-right">
-								<input class="btn btn-action" type="submit" value="Send message">
-							</div>
-						</div>
-					</form>
-
+				<h3>
+					Для связи со мной воспользуйтесь любым из удобных способов связи:
+				</h3>
+				<ul class="contacts">
+					<li class="follow-me-icons">
+						<a href="tel: +7967047020"><i class="fas fa-phone"></i>Phone</li>
+					<li class="follow-me-icons nondecor">
+						<a href="https://api.whatsapp.com/send?phone=79670470205"><i class="fab fa-whatsapp"></i>Whatsapp</a></li>
+					<li class="follow-me-icons nondecor">
+						<a href="https://tlgg.ru/eleonoraparis"><i class="fab fa-telegram-plane">&nbsp;Telegram</i></a></li>
+						<br><br>
+					<li class="follow-me-icons nondecor">
+						<a href="mailto: eleonora.paris@protonmail.com"><i class="far fa-envelope">&nbsp;Email</i></a></li>
+				</ul>
 			</article>
 			<!-- /Article -->
 			
 			<!-- Sidebar -->
-			<aside class="col-sm-3 sidebar sidebar-right">
+<!-- 			<aside class="col-sm-3 sidebar sidebar-right">
 
 				<div class="widget">
 					<h4>Address</h4>
@@ -121,7 +101,7 @@
 					</address>
 				</div>
 
-			</aside>
+			</aside> -->
 			<!-- /Sidebar -->
 
 		</div>
@@ -133,17 +113,21 @@
 
 	<footer id="footer">
 
-		<div class="footer1">
+				<div class="footer1">
 			<div class="container">
 				<div class="row">
 					
 					<div class="col-md-3 widget">
-						<h3 class="widget-title">Contact</h3>
+						<h3 class="widget-title">КОНТАКТЫ</h3>
 						<div class="widget-body">
-							<p>+234 23 9873237<br>
-								<a href="mailto:#">some.email@somewhere.com</a><br>
+							<p class="follow-me-icons">
+								<a href="tel: +79670470205"><i class="fas fa-phone"></i></a>
+								<a href="https://api.whatsapp.com/send?phone=79670470205">
+									<i class="fab fa-whatsapp"></i></a>
+								<a href="https://tlgg.ru/eleonoraparis"><i class="fab fa-telegram-plane"></i></a>
+								<a href="mailto: eleonora.paris@protonmail.com"><i class="far fa-envelope"></i></a>
 								<br>
-								234 Hidden Pond Road, Ashland City, TN 37015
+								Москва
 							</p>	
 						</div>
 					</div>
@@ -151,20 +135,18 @@
 					<div class="col-md-3 widget">
 						<h3 class="widget-title">Follow me</h3>
 						<div class="widget-body">
-							<p class="follow-me-icons clearfix">
-								<a href=""><i class="fa fa-twitter fa-2"></i></a>
-								<a href=""><i class="fa fa-dribbble fa-2"></i></a>
-								<a href=""><i class="fa fa-github fa-2"></i></a>
-								<a href=""><i class="fa fa-facebook fa-2"></i></a>
+							<p class="follow-me-icons">
+								<a href=""><i class="fab fa-instagram"></i></a>		
+								<a href=""><i class="fab fa-facebook-f"></i></a>
+								<a href=""><i class="fab fa-vk"></i></a>
 							</p>	
 						</div>
 					</div>
 
 					<div class="col-md-6 widget">
-						<h3 class="widget-title">Text widget</h3>
+						<h3 class="widget-title">ELEONORA PARIS</h3>
 						<div class="widget-body">
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, dolores, quibusdam architecto voluptatem amet fugiat nesciunt placeat provident cumque accusamus itaque voluptate modi quidem dolore optio velit hic iusto vero praesentium repellat commodi ad id expedita cupiditate repellendus possimus unde?</p>
-							<p>Eius consequatur nihil quibusdam! Laborum, rerum, quis, inventore ipsa autem repellat provident assumenda labore soluta minima alias temporibus facere distinctio quas adipisci nam sunt explicabo officia tenetur at ea quos doloribus dolorum voluptate reprehenderit architecto sint libero illo et hic.</p>
+							<p>Оказываю косметологические услуги на дому. </p>
 						</div>
 					</div>
 
@@ -179,11 +161,10 @@
 					<div class="col-md-6 widget">
 						<div class="widget-body">
 							<p class="simplenav">
-								<a href="#">Home</a> | 
-								<a href="about.html">About</a> |
-								<a href="sidebar-right.html">Sidebar</a> |
-								<a href="contact.html">Contact</a> |
-								<b><a href="signup.html">Sign up</a></b>
+								<a href="#">ГЛАВНАЯ</a> | 
+								<a href="about.html">КТО Я</a> |
+								<a href="sidebar-right.html">УСЛУГИ</a> |
+								<a href="contact.html">КОНТАКТЫ</a> |
 							</p>
 						</div>
 					</div>
@@ -191,7 +172,7 @@
 					<div class="col-md-6 widget">
 						<div class="widget-body">
 							<p class="text-right">
-								Copyright &copy; 2014, Your name. Designed by <a href="http://gettemplate.com/" rel="designer">gettemplate</a> 
+								Eleonora Paris &copy; 2019. All rights reserved.
 							</p>
 						</div>
 					</div>
