--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 	<meta charset="utf-8">
 	<meta name="viewport"    content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
-	<meta name="author"      content="Sergey Pozhilov (GetTemplate.com)">
+	<meta name="author"      content="DarvinLeo">
 	
-	<title>Progressus - Free business bootstrap template by GetTemplate</title>
+	<title>ГЛАВНАЯ. ELEONORA PARIS</title>
 
 	<link rel="shortcut icon" href="assets/images/gt_favicon.png">
 	
 	<link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
-	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
 
 	<!-- Custom styles for our template -->
 	<link rel="stylesheet" href="assets/css/bootstrap-theme.css" media="screen" >
@@ -36,17 +36,17 @@
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
-					<li class="active"><a href="#">Home</a></li>
-					<li><a href="about.html">About</a></li>
+					<li class="active"><a href="#">ГЛАВНАЯ</a></li>
+					<li><a href="about.html">КТО Я</a></li>
 					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">More Pages <b class="caret"></b></a>
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">УСЛУГИ <b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="sidebar-left.html">Left Sidebar</a></li>
-							<li class="active"><a href="sidebar-right.html">Right Sidebar</a></li>
+							<li><a href="sidebar-left.html">Эстетическая косметология</a></li>
+							<li class="active"><a href="sidebar-right.html">Инъекционная косметология</a></li>
 						</ul>
 					</li>
-					<li><a href="contact.html">Contact</a></li>
-					<li><a class="btn" href="signin.html">SIGN IN / SIGN UP</a></li>
+					<li><a href="contact.html">КОНТАКТЫ</a></li>
+					<!-- <li><a class="btn" href="signin.html">SIGN IN / SIGN UP</a></li>   comment: ВХОД\РЕГИСТРАЦИЯ -->
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
@@ -57,9 +57,10 @@
 	<header id="head">
 		<div class="container">
 			<div class="row">
-				<h1 class="lead">AWESOME, CUSTOMIZABLE, FREE</h1>
-				<p class="tagline">PROGRESSUS: free business bootstrap template by <a href="http://www.gettemplate.com/?utm_source=progressus&amp;utm_medium=template&amp;utm_campaign=progressus">GetTemplate</a></p>
-				<p><a class="btn btn-default btn-lg" role="button">MORE INFO</a> <a class="btn btn-action btn-lg" role="button">DOWNLOAD NOW</a></p>
+				<h1 class="lead">КРАСОТА В БОЛЬШОМ ГОРОДЕ</h1>
+				<p class="tagline"></p>
+				<p><a  href="#more"class="btn btn-default btn-lg" role="button">УЗНАТЬ БОЛЬШЕ</a> 
+				   <a  href="contact.html" class="btn btn-action btn-lg" role="button">Получить консультацию</a></p>
 			</div>
 		</div>
 	</header>
@@ -68,43 +69,43 @@
 	<!-- Intro -->
 	<div class="container text-center">
 		<br> <br>
-		<h2 class="thin">The best place to tell people why they are here</h2>
+		<h2 class="thin">КОСМЕТОЛОГИЧЕСКИЕ УСЛУГИ НА ДОМУ</h2>
 		<p class="text-muted">
-			The difference between involvement and commitment is like an eggs-and-ham breakfast:<br> 
-			the chicken was involved; the pig was committed.
+			В работе используется только качественная профессиональная косметика и препараты всемирно известных брендов.
 		</p>
 	</div>
 	<!-- /Intro-->
 		
 	<!-- Highlights - jumbotron -->
 	<div class="jumbotron top-space">
-		<div class="container">
+		<div  id="more" class="container">
 			
-			<h3 class="text-center thin">Reasons to use this template</h3>
+			<h3 class="text-center thin">Преимущества для клиентов</h3>
 			
 			<div class="row">
 				<div class="col-md-3 col-sm-6 highlight">
-					<div class="h-caption"><h4><i class="fa fa-cogs fa-5"></i>Bootstrap-powered</h4></div>
+					<div class="h-caption"><h4><i class="fas fa-syringe fa-5"></i>Качественные препараты</h4></div>
 					<div class="h-body text-center">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque aliquid adipisci aspernatur. Soluta quisquam dignissimos earum quasi voluptate. Amet, dignissimos, tenetur vitae dolor quam iusto assumenda hic reprehenderit?</p>
+						<p>Я работаю только с качественными, оригинальными препаратами от ведущих мировых лидеров в косметологии
+						</p>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6 highlight">
-					<div class="h-caption"><h4><i class="fa fa-flash fa-5"></i>Fat-free</h4></div>
+					<div class="h-caption"><h4><i class="fas fa-comment-medical"></i>Бесплатная консультация</h4></div>
 					<div class="h-body text-center">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, commodi, sequi quis ad fugit omnis cumque a libero error nesciunt molestiae repellat quos perferendis numquam quibusdam rerum repellendus laboriosam reprehenderit! </p>
+						<p>Консультация со мной бесплатна, платите только за работу</p>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6 highlight">
-					<div class="h-caption"><h4><i class="fa fa-heart fa-5"></i>Creative Commons</h4></div>
+					<div class="h-caption"><h4><i class="fa fa-heart fa-5"></i>Внимание к деталям</h4></div>
 					<div class="h-body text-center">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, vitae, perferendis, perspiciatis nobis voluptate quod illum soluta minima ipsam ratione quia numquam eveniet eum reprehenderit dolorem dicta nesciunt corporis?</p>
+						<p>Каждый клиент индивидуален, мой профессиональный опыт поможет с принятием решения</p>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6 highlight">
-					<div class="h-caption"><h4><i class="fa fa-smile-o fa-5"></i>Author's support</h4></div>
+					<div class="h-caption"><h4><i class="fas fa-diagnoses"></i>Здесь тоже что то</h4></div>
 					<div class="h-body text-center">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, excepturi, maiores, dolorem quasi reprehenderit illo accusamus nulla minima repudiandae quas ducimus reiciendis odio sequi atque temporibus facere corporis eos expedita? </p>
+						<p>Бла бла ббла бла </p>
 					</div>
 				</div>
 			</div> <!-- /row  -->
@@ -114,9 +115,10 @@
 	<!-- /Highlights -->
 
 	<!-- container -->
+	<!--
 	<div class="container">
 
-		<h2 class="text-center top-space">Frequently Asked Questions</h2>
+		<h2 class="text-center top-space">Часто задаваемые вопросы</h2>
 		<br>
 
 		<div class="row">
@@ -131,7 +133,7 @@
 					I prefer to use photos from these sites: <a href="http://unsplash.com">Unsplash.com</a> 
 					and <a href="http://www.flickr.com/creativecommons/by-2.0/tags/">Flickr - Creative Commons</a></p>
 			</div>
-		</div> <!-- /row -->
+		</div> 
 
 		<div class="row">
 			<div class="col-sm-6">
@@ -145,14 +147,14 @@
 				<h3>Can you customize this template for me?</h3>
 				<p>Yes, I can. Please drop me a line to sergey-at-pozhilov.com and describe your needs in details. Please note, my services are not cheap.</p>
 			</div>
-		</div> <!-- /row -->
+		</div>
 
 		<div class="jumbotron top-space">
 			<h4>Dicta, nostrum nemo soluta sapiente sit dolor quae voluptas quidem doloribus recusandae facere magni ullam suscipit sunt atque rerum eaque iusto facilis esse nam veniam incidunt officia perspiciatis at voluptatibus. Libero, aliquid illum possimus numquam fuga.</h4>
      		<p class="text-right"><a class="btn btn-primary btn-large">Learn more »</a></p>
   		</div>
 
-</div>	<!-- /container -->
+</div>	/container -->
 	
 	<!-- Social links. @TODO: replace by link/instructions in template -->
 	<section id="social">
@@ -179,12 +181,16 @@
 				<div class="row">
 					
 					<div class="col-md-3 widget">
-						<h3 class="widget-title">Contact</h3>
+						<h3 class="widget-title">КОНТАКТЫ</h3>
 						<div class="widget-body">
-							<p>+234 23 9873237<br>
-								<a href="mailto:#">some.email@somewhere.com</a><br>
+							<p class="follow-me-icons">
+								<a href="tel: +79670470205"><i class="fas fa-phone"></i></a>
+								<a href="https://api.whatsapp.com/send?phone=79670470205">
+									<i class="fab fa-whatsapp"></i></a>
+								<a href="https://tlgg.ru/eleonoraparis"><i class="fab fa-telegram-plane"></i></a>
+								<a href="mailto: eleonora.paris@protonmail.com"><i class="far fa-envelope"></i></a>
 								<br>
-								234 Hidden Pond Road, Ashland City, TN 37015
+								Москва
 							</p>	
 						</div>
 					</div>
@@ -193,19 +199,17 @@
 						<h3 class="widget-title">Follow me</h3>
 						<div class="widget-body">
 							<p class="follow-me-icons">
-								<a href=""><i class="fa fa-twitter fa-2"></i></a>
-								<a href=""><i class="fa fa-dribbble fa-2"></i></a>
-								<a href=""><i class="fa fa-github fa-2"></i></a>
-								<a href=""><i class="fa fa-facebook fa-2"></i></a>
+								<a href=""><i class="fab fa-instagram"></i></a>		
+								<a href=""><i class="fab fa-facebook-f"></i></a>
+								<a href=""><i class="fab fa-vk"></i></a>
 							</p>	
 						</div>
 					</div>
 
 					<div class="col-md-6 widget">
-						<h3 class="widget-title">Text widget</h3>
+						<h3 class="widget-title">ELEONORA PARIS</h3>
 						<div class="widget-body">
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, dolores, quibusdam architecto voluptatem amet fugiat nesciunt placeat provident cumque accusamus itaque voluptate modi quidem dolore optio velit hic iusto vero praesentium repellat commodi ad id expedita cupiditate repellendus possimus unde?</p>
-							<p>Eius consequatur nihil quibusdam! Laborum, rerum, quis, inventore ipsa autem repellat provident assumenda labore soluta minima alias temporibus facere distinctio quas adipisci nam sunt explicabo officia tenetur at ea quos doloribus dolorum voluptate reprehenderit architecto sint libero illo et hic.</p>
+							<p>Оказываю косметологические услуги на дому. </p>
 						</div>
 					</div>
 
@@ -220,11 +224,10 @@
 					<div class="col-md-6 widget">
 						<div class="widget-body">
 							<p class="simplenav">
-								<a href="#">Home</a> | 
-								<a href="about.html">About</a> |
-								<a href="sidebar-right.html">Sidebar</a> |
-								<a href="contact.html">Contact</a> |
-								<b><a href="signup.html">Sign up</a></b>
+								<a href="#">ГЛАВНАЯ</a> | 
+								<a href="about.html">КТО Я</a> |
+								<a href="sidebar-right.html">УСЛУГИ</a> |
+								<a href="contact.html">КОНТАКТЫ</a> |
 							</p>
 						</div>
 					</div>
@@ -232,7 +235,7 @@
 					<div class="col-md-6 widget">
 						<div class="widget-body">
 							<p class="text-right">
-								Copyright &copy; 2014, Your name. Designed by <a href="http://gettemplate.com/" rel="designer">gettemplate</a> 
+								Eleonora Paris &copy; 2019. All rights reserved.
 							</p>
 						</div>
 					</div>
