--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
 
 		<ol class="breadcrumb">
 			<li><a href="index.html">ГЛАВНАЯ</a></li>
-			<li class="active">КТО Я</li>
+			<li class="active">КОНТАКТЫ	</li>
 		</ol>
 
 		<div class="row">
