--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 		<div class="container">
 			<div class="navbar-header">
 				<!-- Button for smallest screens -->
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-				<a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt="Progressus HTML5 template"></a>
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar">ываы</span> <span class="icon-bar">афыа</span> <span class="icon-bar">фыва</span> </button>
+				<a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt="logo"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
-					<li class="active"><a href="#">ГЛАВНАЯ</a></li>
+					<li class="active"><a href="index.html">ГЛАВНАЯ</a></li>
 					<li><a href="about.html">КТО Я</a></li>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">УСЛУГИ <b class="caret"></b></a>
