--- a/index-origin.html
+++ b/index-origin.html
@@ -26,7 +26,7 @@
 </head>
 
 <body class="home">
-		<!-- Fixed navbar -->
+	<!-- Fixed navbar -->
 	<div class="navbar navbar-inverse navbar-fixed-top headroom" >
 		<div class="container">
 			<div class="navbar-header">
@@ -34,21 +34,21 @@
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
 				<a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt="Progressus HTML5 template"></a>
 			</div>
-			<nav1 class="navbar-collapse collapse">
-				<ul class="nav1 pull-right">
+			<div class="navbar-collapse collapse">
+				<ul class="nav navbar-nav pull-right">
 					<li class="active"><a href="index.html">ГЛАВНАЯ</a></li>
 					<li><a href="about.html">КТО Я</a></li>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">УСЛУГИ <b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li><a href="sidebar-left.html">Эстетическая косметология</a></li>
-							<li><a href="sidebar-right.html">Инъекционная косметология</a></li>
+							<li class="active"><a href="sidebar-right.html">Инъекционная косметология</a></li>
 						</ul>
 					</li>
 					<li><a href="contact.html">КОНТАКТЫ</a></li>
 					<!-- <li><a class="btn" href="signin.html">SIGN IN / SIGN UP</a></li>   comment: ВХОД\РЕГИСТРАЦИЯ -->
 				</ul>
-			</nav1> <!--/.nav-collapse -->
+			</div><!--/.nav-collapse -->
 		</div>
 	</div> 
 	<!-- /.navbar -->
@@ -256,8 +256,5 @@
 	<script src="assets/js/headroom.min.js"></script>
 	<script src="assets/js/jQuery.headroom.min.js"></script>
 	<script src="assets/js/template.js"></script>
-	<script src="http://css3-mediaqueries-js.googlecode.com/files/css3-mediaqueries.js"></script>
-	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
 </body>
 </html>
