--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Pedicure a Beauty Category Flat Bootstrap Responsive Website Template | Contact :: w3layouts</title>
+<title>Pedicure a Beauty Category Flat Bootstrap Responsive Website Template | Gallery :: w3layouts</title>
 <!-- custom-theme -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -16,15 +16,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 		function hideURLbar(){ window.scrollTo(0,1); } </script>
 
+<link href="css/simpleLightbox.css" rel="stylesheet" type="text/css" />
+<!--for team carousel css --> 
 <!-- custom-theme css files -->
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <!-- //custom-theme css files-->
-
 <!-- font-awesome-icons -->
 <link href="css/font-awesome.css" rel="stylesheet"> 
 <!-- //font-awesome-icons -->
-
 <!-- googlefonts -->
 <link href="//fonts.googleapis.com/css?family=PT+Serif:400,700" rel="stylesheet">
 <link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese" rel="stylesheet">
@@ -91,14 +91,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li><a href="index.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
 						<li><a href="services.html">Services</a></li>
-						<li><a href="gallery.html">Gallery</a></li>
+						<li class="active"><a href="gallery.html">Gallery</a></li>
 						<li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages <span class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li><a href="icons.html">Web Icons</a></li>
 								<li><a href="codes.html">Short Codes</a></li>
 							</ul>
 						</li> 
-						<li class="active"><a href="contact.html">Contact</a></li>
+						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</div>
 			</div>
@@ -109,50 +109,121 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<!--/banner-info-->
 </div>
  <!--/banner-section-->
- 	<!-- /inner_content -->
-	<div class="banner-bottom">
+ <!-- gallery -->
+	<div class="banner-bottom gallery">
 		<div class="container">
-			<div class="inner_sec_info_agileits_w3">
-              <h3 class="heading-agileinfo">Contact Us<span>Skin,Nails and Beauty Services</span></h3>
-				<div class="contact-form">
-					     <form method="post" action="#">
-							 <div class="left_form">
-					    	<div>
-						    	<span><label>Name</label></span>
-						    	<span><input name="userName" type="text" class="textbox" required=""></span>
-						    </div>
-						    <div>
-						    	<span><label>E-mail</label></span>
-						    	<span><input name="userEmail" type="text" class="textbox" required=""></span>
-						    </div>
-						    <div>
-						     	<span><label>Fax</label></span>
-						    	<span><input name="userPhone" type="text" class="textbox" required=""></span>
-						    </div>
-					    </div>
-					    <div class="right_form">
-								<div>					    	
-									<span><label>Message</label></span>
-									<span><textarea name="Message" required=""> </textarea></span>
+			<h3 class="heading-agileinfo">Our Gallery<span>Skin,Nails and Beauty Services</span></h3>
+			<div class="w3ls_gallery_grids">
+				<div class="col-md-4 w3_agile_gallery_grid">
+					<div class="agile_gallery_grid">
+						<a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="images/g1.jpg">
+							<div class="agile_gallery_grid1">
+								<img src="images/g1.jpg" alt=" " class="img-responsive" />
+								<div class="w3layouts_gallery_grid1_pos">
+									<h3>Pedicure</h3>
+									<p> Beauty</p>
 								</div>
-							   <div>
-									<span><input type="submit" value="Submit" class="myButton"></span>
-							  </div>
-					    </div>
-					    <div class="clearfix"></div>
-						</form>
-				  </div>
+							</div>
+						</a>
+					</div>
+					<div class="agile_gallery_grid">
+						<a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="images/g2.jpg">
+							<div class="agile_gallery_grid1">
+								<img src="images/g2.jpg" alt=" " class="img-responsive" />
+								<div class="w3layouts_gallery_grid1_pos">
+									<h3>Pedicure</h3>
+									<p> Beauty</p>
+								</div>
+							</div>
+						</a>
+					</div>
+					<div class="agile_gallery_grid">
+						<a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="images/g3.jpg">
+							<div class="agile_gallery_grid1">
+								<img src="images/g3.jpg" alt=" " class="img-responsive" />
+								<div class="w3layouts_gallery_grid1_pos">
+									<h3>Pedicure</h3>
+									<p> Beauty</p>
+								</div>
+							</div>
+						</a>
+					</div>
+				</div>
+				<div class="col-md-4 w3_agile_gallery_grid">
+					<div class="agile_gallery_grid">
+						<a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="images/g4.jpg">
+							<div class="agile_gallery_grid1">
+								<img src="images/g4.jpg" alt=" " class="img-responsive" />
+								<div class="w3layouts_gallery_grid1_pos">
+									<h3>Pedicure</h3>
+									<p> Beauty</p>
+								</div>
+							</div>
+						</a>
+					</div>
+					<div class="agile_gallery_grid">
+						<a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="images/g5.jpg">
+							<div class="agile_gallery_grid1">
+								<img src="images/g5.jpg" alt=" " class="img-responsive" />
+								<div class="w3layouts_gallery_grid1_pos">
+									<h3>Pedicure</h3>
+									<p> Beauty</p>
+								</div>
+							</div>
+						</a>
+					</div>
+					<div class="agile_gallery_grid">
+						<a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="images/g6.jpg">
+							<div class="agile_gallery_grid1">
+								<img src="images/g6.jpg" alt=" " class="img-responsive" />
+								<div class="w3layouts_gallery_grid1_pos">
+									<h3>Pedicure</h3>
+									<p> Beauty</p>
+								</div>
+							</div>
+						</a>
+					</div>
+				</div>
+				<div class="col-md-4 w3_agile_gallery_grid">
+					<div class="agile_gallery_grid">
+						<a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="images/g7.jpg">
+							<div class="agile_gallery_grid1">
+								<img src="images/g7.jpg" alt=" " class="img-responsive" />
+								<div class="w3layouts_gallery_grid1_pos">
+									<h3>Pedicure</h3>
+									<p> Beauty</p>
+								</div>
+							</div>
+						</a>
+					</div>
+					<div class="agile_gallery_grid">
+						<a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="images/g8.jpg">
+							<div class="agile_gallery_grid1">
+								<img src="images/g8.jpg" alt=" " class="img-responsive" />
+								<div class="w3layouts_gallery_grid1_pos">
+									<h3>Pedicure</h3>
+									<p> Beauty</p>
+								</div>
+							</div>
+						</a>
+					</div>
+					<div class="agile_gallery_grid">
+						<a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="images/g9.jpg">
+							<div class="agile_gallery_grid1">
+								<img src="images/g9.jpg" alt=" " class="img-responsive" />
+								<div class="w3layouts_gallery_grid1_pos">
+									<h3>Pedicure</h3>
+									<p> Beauty</p>
+								</div>
+							</div>
+						</a>
+					</div>
+				</div>
+				<div class="clearfix"></div>
 			</div>
-		
-
 		</div>
 	</div>
-		<!-- /map -->
-			<div class="map_w3layouts_agile">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387142.84010033106!2d-74.25819252532891!3d40.70583163828471!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY%2C+USA!5e0!3m2!1sen!2sin!4v1475140387172" style="border:0"></iframe>
-
-			</div>
-		<!-- //map -->
+<!-- //gallery -->
 
 <!-- Subscribe -->
 	<div class="wthree-subscribef-w3ls">
@@ -246,6 +317,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- for bootstrap working -->
 	<script src="js/bootstrap.js"></script>
 <!-- //for bootstrap working -->
+<!-- //js -->
 <!-- for smooth scrolling -->
 <script src="js/SmoothScroll.min.js"></script>
 	<script type="text/javascript" src="js/move-top.js"></script>
@@ -279,6 +351,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	});
 </script> 
 <!-- //scrolling script -->
+
+<!-- simpleLightbox -->
+		<script src="js/simpleLightbox.js"></script>	<script>
+		$('.w3_agile_gallery_grid a').simpleLightbox();
+	</script>
+<!-- //simpleLightbox -->
 
 </body>
 </html>
