--- a/services.html
+++ b/services.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Pedicure a Beauty Category Flat Bootstrap Responsive Website Template | Contact :: w3layouts</title>
+<title>Pedicure a Beauty Category Flat Bootstrap Responsive Website Template | Services :: w3layouts</title>
 <!-- custom-theme -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -15,16 +15,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 		function hideURLbar(){ window.scrollTo(0,1); } </script>
-
 <!-- custom-theme css files -->
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <!-- //custom-theme css files-->
-
 <!-- font-awesome-icons -->
 <link href="css/font-awesome.css" rel="stylesheet"> 
 <!-- //font-awesome-icons -->
-
 <!-- googlefonts -->
 <link href="//fonts.googleapis.com/css?family=PT+Serif:400,700" rel="stylesheet">
 <link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese" rel="stylesheet">
@@ -90,7 +87,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<ul class="nav navbar-nav ">
 						<li><a href="index.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
-						<li><a href="services.html">Services</a></li>
+						<li class="active"><a href="services.html">Services</a></li>
 						<li><a href="gallery.html">Gallery</a></li>
 						<li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages <span class="caret"></span></a>
 							<ul class="dropdown-menu">
@@ -98,7 +95,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<li><a href="codes.html">Short Codes</a></li>
 							</ul>
 						</li> 
-						<li class="active"><a href="contact.html">Contact</a></li>
+						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</div>
 			</div>
@@ -109,50 +106,46 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<!--/banner-info-->
 </div>
  <!--/banner-section-->
- 	<!-- /inner_content -->
-	<div class="banner-bottom">
+ 	<!-- about-top -->
+	<div class="agileits-about-top">
 		<div class="container">
-			<div class="inner_sec_info_agileits_w3">
-              <h3 class="heading-agileinfo">Contact Us<span>Skin,Nails and Beauty Services</span></h3>
-				<div class="contact-form">
-					     <form method="post" action="#">
-							 <div class="left_form">
-					    	<div>
-						    	<span><label>Name</label></span>
-						    	<span><input name="userName" type="text" class="textbox" required=""></span>
-						    </div>
-						    <div>
-						    	<span><label>E-mail</label></span>
-						    	<span><input name="userEmail" type="text" class="textbox" required=""></span>
-						    </div>
-						    <div>
-						     	<span><label>Fax</label></span>
-						    	<span><input name="userPhone" type="text" class="textbox" required=""></span>
-						    </div>
-					    </div>
-					    <div class="right_form">
-								<div>					    	
-									<span><label>Message</label></span>
-									<span><textarea name="Message" required=""> </textarea></span>
-								</div>
-							   <div>
-									<span><input type="submit" value="Submit" class="myButton"></span>
-							  </div>
-					    </div>
-					    <div class="clearfix"></div>
-						</form>
-				  </div>
+		<h3 class="heading-agileinfo">Services<span>Skin,Nails and Beauty Services</span></h3>
+			<div class="agileinfo-top-grids">
+				<div class="col-sm-4 wthree-top-grid">
+					<img src="images/g1.jpg" class="img-responsive" alt="" />
+					<h4>Packages</h4>
+					<p>Pellentesque auctor euismod lectus a pretium. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+				</div>
+				<div class="col-sm-4 wthree-top-grid">
+					<img src="images/g2.jpg" class="img-responsive" alt="" />
+					<h4>Mani-Pedi</h4>
+					<p>Pellentesque auctor euismod lectus a pretium. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+				</div>
+				<div class="col-sm-4 wthree-top-grid">
+					<img src="images/g3.jpg" class="img-responsive" alt="" />
+					<h4>Facial</h4>
+					<p>Pellentesque auctor euismod lectus a pretium. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+				</div>
+				<div class="col-sm-4 wthree-top-grid">
+					<img src="images/g4.jpg" class="img-responsive" alt="" />
+					<h4>Regular Wax</h4>
+					<p>Pellentesque auctor euismod lectus a pretium. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+				</div>
+				<div class="col-sm-4 wthree-top-grid">
+					<img src="images/g5.jpg" class="img-responsive" alt="" />
+					<h4>Threading</h4>
+					<p>Pellentesque auctor euismod lectus a pretium. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+				</div>
+				<div class="col-sm-4 wthree-top-grid">
+					<img src="images/g6.jpg" class="img-responsive" alt="" />
+					<h4>Bleach</h4>
+					<p>Pellentesque auctor euismod lectus a pretium. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+				</div>
+				<div class="clearfix"> </div>
 			</div>
-		
-
 		</div>
 	</div>
-		<!-- /map -->
-			<div class="map_w3layouts_agile">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387142.84010033106!2d-74.25819252532891!3d40.70583163828471!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY%2C+USA!5e0!3m2!1sen!2sin!4v1475140387172" style="border:0"></iframe>
-
-			</div>
-		<!-- //map -->
+	<!-- //about-top -->
 
 <!-- Subscribe -->
 	<div class="wthree-subscribef-w3ls">
@@ -246,6 +239,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- for bootstrap working -->
 	<script src="js/bootstrap.js"></script>
 <!-- //for bootstrap working -->
+<!-- //js -->
 <!-- for smooth scrolling -->
 <script src="js/SmoothScroll.min.js"></script>
 	<script type="text/javascript" src="js/move-top.js"></script>
